--- a/src/Components/AuthPage/LoginSignUpPage.css
+++ b/src/Components/AuthPage/LoginSignUpPage.css
@@ -5,7 +5,7 @@
     color: #fff;
   
     /* box-shadow: 0 0 10px rgba(0, 0, 0, .2) !important; */
-  
+    
     border-radius: 20px;
     padding: 20px 60px ;
     margin-top:2%;
@@ -19,9 +19,20 @@
     overflow:hidden;
     position: relative;
     background-color: rgba(36, 36, 36, 255);
-    /* padding-top: 5%; */
-    /* padding-bottom: 3%; */
-    /* padding-left: 50px; */
+    padding-top: 5%;
+    padding-bottom: 3%;
+    padding-left: 55px;
+
+   
+}
+.signup-page{
+    overflow:hidden;
+    position: relative;
+    background-color: rgba(36, 36, 36, 255);
+    padding-top: 3%;
+    padding-bottom: 1%;
+    /* padding-left: px; */
+    padding-right: 35px;
 
    
 }
@@ -42,13 +53,11 @@
 .input-box input {
     width: 100%;
     height: 100%;
-    /* background: transparent; */
-    /* border: 2px solid rgba(255, 255, 255, .2); */
-    /* outline: none; */
     border-radius: 40px;
     font-size: 16px;
     /* color: #fff; */
     padding: 20px 45px 20px 20px;
+    border: none;
 
 }
 
