--- a/src/Components/LandingPage/Footer/Footer.css
+++ b/src/Components/LandingPage/Footer/Footer.css
@@ -1,14 +1,14 @@
 
 .footer {
-    padding: 10px 25px !important ;
+    padding: 10px 25px  ;
     width: 100%;
-    /* height: 20% !important; */
-    position: relative;
+    /* height: 20% ; */
+    position: absolute;
     background-color: #282828;
     color: white;
     font-size: 10px;
     text-align: center;
-    margin-top: 1%;
+    /* margin-top: 1%; */
     
   }
   .footerTitle {
@@ -21,7 +21,7 @@
     width: 1360px;
     display: flex;
     /* height: 20%; */
-    padding: 15px  !important;
+    padding: 15px ;
     
     
   }
