--- a/src/Components/PcDetails/PC/PC.css
+++ b/src/Components/PcDetails/PC/PC.css
@@ -5,8 +5,8 @@
  padding: 1em 1em;
  border-radius: 0.625em;
  height: 8%;
- width: 60%;
- margin-left: 12%;
+ width: 69%;
+ margin-left: 5%;
 }
 
 .flex-group-1 {
@@ -15,8 +15,12 @@
 }
 
 .PC-detail-2-pc-Name {
- font-size: 0.875rem;
- font-weight: 600;
+ font-size: 0.87rem; /* Taille de police réduite */
+  font-weight: 600;    /* Poids de police en gras */
+  white-space: nowrap; /* Empêche le retour à la ligne */
+  overflow: hidden;    /* Masque le texte débordant */
+  text-overflow: ellipsis; /* Ajoute des points de suspension */
+  max-width: 200px; 
 }
 .flex-details-2-img {
  width: 3rem;
@@ -40,7 +44,7 @@ height: 2%;
  background-color: #f6f6f6;
  color: #3c413f;
  position: absolute;
- margin-top: -4%;
+ margin-top: -2%;
 }
 
 .flex-details-2-view {
@@ -54,7 +58,7 @@ height: 2%;
  /* align-self: center; */
  position: absolute;
  margin-left: 17%;
- margin-top: -4%;
+ margin-top: -2%;
 }
 
 .PC-detail-2-pc-icon-view {
@@ -64,8 +68,9 @@ height: 2%;
 }
 
 .flex-details-2-price {
- font-size: 0.875rem;
+ font-size: 0.87rem;
  font-weight: 600;
+
 }
 .flex-details-2-tnd {
  font-size: 0.625rem;
