--- a/src/Components/ProfilUser/profilUser.css
+++ b/src/Components/ProfilUser/profilUser.css
@@ -1,27 +1,40 @@
 .cont1 { 
     
  position: relative;
- width:1400px;
- height: 500px;
+ width:1200px;
+ height: 1000px;
  color: #fff;
  border-radius: 20px;
  padding: 20px 60px ;
  margin-top:4%;
  margin-bottom: 4%;
- margin-left: 4%;
+ margin-left: 10.5%;
  background: #3c413f;
 
 }
+.cont11 { 
+    
+  position: relative;
+  width:1200px;
+  height: 600px;
+  color: #fff;
+  border-radius: 20px;
+  padding: 20px 60px ;
+  margin-top:4%;
+  margin-bottom: 4%;
+  margin-left: 10.5%;
+  background: #3c413f;
+ 
+ }
 .contt{
   overflow: hidden;
   position: relative;
   background-color: rgba(36, 36, 36, 255);
 }
+.infoss{
+  font-size: 40px;
+}
  
-/* .nav-link.active {
-
- border-color: white !important; /* Changer la couleur de bordure des onglets actifs en blanc */
-/* }  */
 .nav-link,
 .nav-link-favorites {
   color: black !important; /* Changer la couleur de bordure des onglets actifs en blanc */
@@ -30,12 +43,12 @@
 }
 
 .input {
- width: 80%;
+ width: 180%;
  padding: 15px;
  border-radius: 20px;
  font-size: 16px;
- /* color: #fff; */
- margin: 20px;
+ margin-top: 15% !important;
+ margin: 10px 50px 10px -80px;
  border: none;
 
 }
@@ -47,20 +60,48 @@
  font-weight: 500;
  color: black;
  border: none;
- padding: 12px 40px;
+ padding: 10px 30px;
  background: linear-gradient(100deg, #ffd369 , #ffffff 120%);
  border-radius: 15px;
  line-height: 18px;
- margin-left: 82% !important;
- margin-top: 2%;
+ margin-left: 17% !important;
+ margin-top: 6% !important;
 }
 .text{
- font-size: 18px;
- 
+ font-size: 20px;
+ font-weight: 400;
+ margin-left: 20%;
+ justify-content:left !important;
+} 
+.infor{
+  font-size: 35px;
+  font-weight: 600;
+  margin-left: 19%;
 }
 .informations{
- margin-top: 5%;
+ margin-top: 40%;
+ margin-left: -130% !important;
+
 }
 .cont1 h1{
  margin-top: 1.5%;
 }
+
+.tessst {
+  width: 600px; /* Ajustez la largeur selon vos besoins */
+  height: auto; /* Assure que l'image conserve ses proportions */
+ margin-right: 150px;
+  border-radius: 50%; /* Exemple: rendre l'image circulaire */
+  margin-bottom: 220px; /* Espace en dessous de l'image */
+}
+
+.tesst {
+  width: 700px; /* Ajustez la largeur selon vos besoins */
+  height: auto; /* Assure que l'image conserve ses proportions */
+ margin-left: 600px;
+  margin-top: -18% !important;
+ border-radius: 50%; /* Exemple: rendre l'image circulaire */
+}
+
+
+
