--- a/src/Components/LandingPage/CarouselSection/CarouselSection.css
+++ b/src/Components/LandingPage/CarouselSection/CarouselSection.css
@@ -1,6 +1,7 @@
 
   .carousel-section{
     z-index: 100;
+
   }
  
   .background-shapes img {
@@ -114,7 +115,10 @@
   /* font-family: Poppins; */
   font-weight: 700;
   letter-spacing: 0.06875rem;
-  margin-bottom:10% ;
+  margin-bottom:15% ;
+  margin-top: -40%;
+  
+  
 }
 
 .search-btn:hover {
@@ -134,6 +138,7 @@ Add active (click) effect */
 
 .background-shapes img {
   display: block;
+  margin-top: -20%;
 } 
 .carousel-section {
     padding-left: 0;
