--- a/src/Components/SearchPc/PcCard/PcCard.css
+++ b/src/Components/SearchPc/PcCard/PcCard.css
@@ -18,7 +18,11 @@
     position:relative;
     margin-top: 10px;
 }
-
+.favorite-btn{
+    border: #f6f6f6;
+    margin-left: 40px;
+    background-color: #3c413f;
+}
 .card {
     background: #3c413f;
     border-radius: 1rem;
