--- a/src/Components/SearchPc/PcCard/PcCard.css
+++ b/src/Components/SearchPc/PcCard/PcCard.css
@@ -46,13 +46,10 @@
     width: 5.625rem;
 }
 
-.card-btn:hover {
-    background: #ffecb3;
-}
-
 .card-btn {
-    width: 8.875rem;
-    height: 2.375rem;
+    width: 10rem;
+    height: 8rem;
+    margin-right: 50%;
     flex-shrink: 0;
     border-radius: 10px;
     background: #ffd369;
@@ -65,7 +62,36 @@
     cursor: pointer;
     margin-top: 1.5rem;
     margin-bottom: -1rem;
-}
+    transition: all 0.3s ease; /* Transition douce pour l'ombre et la taille du texte */
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1); /* Ombre légère */
+  }
+  
+  .card-btn:hover {
+    background: #ffecb3;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2); /* Ombre plus prononcée au survol */
+    font-size: 0.8rem; /* Légère augmentation de la taille du texte */
+  }
+
+  .favorite-btn {
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: 50%;
+    background: transparent;
+    border: 2px solid #ffd369;
+    color: #ffd369;
+    font-size: 1.2rem;
+    font-family: Poppins;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all 0.3s ease; /* Transition douce pour la couleur et la bordure */
+  }
+  
+  .favorite-btn:hover {
+    background: #ffd369; /* Couleur de fond au survol */
+    color: #0d120e; /* Couleur du texte au survol */
+  }
+  
+  
 
 .card-type {
     display: flex;
@@ -113,14 +139,14 @@
 }
 .container-card .box .container1 .row {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* 3 colonnes égales */
-    grid-gap: 20px; /* Espacement entre les colonnes */
+    grid-template-columns: repeat(3, 1fr); 
+    grid-gap: 20px; 
   }
   
   /* Style pour chaque carte */
   .container-card .box .container1 .row .card {
     /* Ajoutez vos styles de carte ici */
-    margin-bottom: 10px; /* Espacement en bas de chaque carte */
+    margin-bottom: 10px; 
   }
   .bbb{
     margin-left: 15%;
